--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="ru">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale-1">
-        <title>Husky's World view</title>
+        <title>Хускаий мировоззрение</title>
         <link rel="icon" href="//hooskai.top/images/favicon.png">
         <!-- Description -->
-        <meta name="description" content="Connecting a Wider World">
+        <meta name="description" content="Связь с более широким миром">
         <!-- Keywords -->
-        <meta name="keywords" content="胡斯凯,胡斯凱,hooskai,siberia husky,SiberiaHusky">
+        <meta name="keywords" content="胡斯凯,胡斯凱,hooskai,siberia husky,SiberiaHusky,Нускаий">
         <!-- Fontawesome -->
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
         <!-- Style -->
@@ -19,7 +19,7 @@
         <!-- nav bar -->
         <nav class="blur us-n">
             <div style="margin: 24px; vertical-align: text-bottom;">
-                <p class="dp-ib fs-xl">Husky</p><p class="dp-ib fs-lr" style="margin-left: 2px;">'s World View</p>
+                <p class="dp-ib fs-xl">Хускаий</p><p class="dp-ib fs-lr" style="margin-left: 8px;">мировоззрение</p>
             </div>
         </nav>
 
@@ -37,7 +37,7 @@
                 <div class="gradient-overlay"></div>
             </div>
                 <div class="tt-c" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; z-index: 2;">
-                    <h1>Connecting a wider world.</h1>
+                    <h1>Связь с более широким миром.</h1>
                 </div>
             </div>
 
@@ -45,24 +45,23 @@
             <div style="margin: 32px; margin-top: 0; text-align: end;">
                 <div class="us-n" style="margin-bottom: 16px; vertical-align: text-bottom;">
                     <p class="dp-ib" style="margin-right: 8px; color: rgba(255, 255, 255, 0.25);">我的标签</p>
-                    <h1 class="dp-ib fs-xxl">My tags</h1>
-                    <p style="color: rgba(255, 255, 255, 0.25);">First of all, nice to meet U!</p>
+                    <h1 class="dp-ib fs-xxl">Мои теги</h1>
+                    <p style="color: rgba(255, 255, 255, 0.25);">Прежде всего, приятно познакомиться!</p>
                 </div>
 
                 <div style="text-align: left;">
                     <p class="fs-l">
                         <ul>
-                            <li>Use my whole life to tell many unfortunate stories.</li><!--
-                            --><li>Born for the Earth's construction for <span class="fw-b us-n" id="censord" style="cursor: text;">16</span> years.</li><!--
-                            --><li>Coastal citizens from Furry Republic.</li><!--
-                            --><li>INFP</li><li>LGBT 🌈</li><li>Stop Asian Hate</li><li>Black Lives Matter</li><!--
-                            --><li>Moderate social anxiety disorder patient (self-identified).</li><!--
-                            --><li>Like to coding about random things.</li>
+                            <li>Используйте всю мою жизнь, чтобы рассказать много несчастных историй. </li><!--
+                            --><li>Я рожден для строительства Земли на протяжении <span class="fw-b us-n" id="censord" style="cursor: text;">16</span> лет.</li><!--
+                            --><li>Береговые жители из Furry Republic.</li><!--
+                            --><li>INFP</li><!--
+                            --><li>Нравится заниматься программированием случайных вещей.</li>
                         </ul>
                     </p>
 
                     <ul class="us-n" style="display: flex; text-align: end; margin-top: 24px;">
-                        <li title="I'm so sorry, but this is under construction..."><a href="#">About me</a></li>
+                        <li title="Простите, но это находится в стадии разработки..."><a href="#">Обо мне</a></li>
                     </ul>
                 </div>
             </div>
@@ -70,18 +69,18 @@
             <div style="margin: 32px; margin-top: 0; text-align: end;">
                 <div class="us-n" style="margin-bottom: 16px; vertical-align: text-bottom;">
                     <p class="dp-ib" style="margin-right: 8px; color: rgba(255, 255, 255, 0.25);">我喜欢的吃的</p>
-                    <h1 class="dp-ib fs-xxl">My favorites foods</h1>
-                    <p style="color: rgba(255, 255, 255, 0.25);">Who doesn't love good food?</p>
+                    <h1 class="dp-ib fs-xxl">Моя любимая еда</h1>
+                    <p style="color: rgba(255, 255, 255, 0.25);">Кто не любит хорошую еду?</p>
                 </div>
 
                 <div style="text-align: left;">
                     <p class="fs-l" >
                         <ul>
-                            <li>Meat</li><!--
-                            --><li>Fried meat</li><!--
-                            --><li>Raw salmon</li><!--
-                            --><li>Potatoes (all kinds of practices, except raw<span class="fw-b" id="censord">, and Sweet potatoes are NOT potatoes!</span>)</li><!--
-                            --><li>Hamburgers & Sandwiches</li>
+                            <li>Мясо</li><!--
+                            --><li>Жареное мясо</li><!--
+                            --><li>Сырая лосось</li><!--
+                            --><li>Картофель (любые виды приготовления, кроме сырого) <span class="fw-b" id="censord">(Сладкий картофель НЕ является картофелем!)</span></li><!--
+                            --><li>Гамбургеры и сэндвичи</li>
                         </ul>
                     </p>
                 </div>
@@ -91,19 +90,18 @@
             <div style="margin: 32px; margin-top: 64px; text-align: end;">
                 <div class="us-n" style="margin-bottom: 16px; vertical-align: text-bottom;">
                     <p class="dp-ib" style="margin-right: 8px; color: rgba(255, 255, 255, 0.25);">我的作品</p>
-                    <h1 class="dp-ib fs-xxl">My works</h1>
-                    <p style="color: rgba(255, 255, 255, 0.25);">My works and Web-related stuffs.</p>
+                    <h1 class="dp-ib fs-xxl">Мои работы</h1>
+                    <p style="color: rgba(255, 255, 255, 0.25);">мои работы и веб-основанные вещи.</p>
                 </div>
 
                 <div style="text-align: left;">
                     <p class="fs-l">
                         <ul class="list2">
-                            <li><a href="/apps/piday/">Calculate to Pi day</a></li><!--
-                            --><li><a href="https://github.com/SiberiaHusky/Hooskai-Chamfered-Square/blob/main/README.md" target="_blank">Hooskai Chamfered Square font<i class="fa-solid fa-arrow-up-right-from-square" id="icon-left"></i></a></li><!--
-                            --><li><a href="https://stats.uptimerobot.com/5XXzmSM9NJ" target="_blank">My website status<i class="fa-solid fa-arrow-up-right-from-square" id="icon-left"></i></a></li><!--
-                            --><li><a href="/links">Friends links</a></li><!--
+                            <li><a href="https://github.com/SiberiaHusky/Hooskai-Chamfered-Square/blob/main/README.md" target="_blank">Шрифт Hooskai Chamfered Square<i class="fa-solid fa-arrow-up-right-from-square" id="icon-left"></i></a></li><!--
+                            --><li><a href="https://stats.uptimerobot.com/5XXzmSM9NJ" target="_blank">Статус моего веб-сайта<i class="fa-solid fa-arrow-up-right-from-square" id="icon-left"></i></a></li><!--
+                            --><li><a href="/links">Ссылки друзей</a></li><!--
                             --><li><a href="https://hooskai.top">Chinese Китайски 中文</a></li><!--
-                            ><li><a href="https://ru.hooskai.top">Russian Руссий 俄语</a></li-->
+                            --><li><a href="https://intl.hooskai.top">English Английский 英文</a></li>
                         </ul>
                     </p>
                 </div>
@@ -113,8 +111,8 @@
             <div style="margin: 32px; margin-top: 64px; text-align: end;">
                 <div class="us-n" style="margin-bottom: 16px; vertical-align: text-bottom;">
                     <p class="dp-ib" style="margin-right: 8px; color: rgba(255, 255, 255, 0.25);">我的联系方式</p>
-                    <h1 class="dp-ib fs-xxl">My contacts</h1>
-                    <p style="color: rgba(255, 255, 255, 0.25);">My account name on SNS, and E-Mail address.</p>
+                    <h1 class="dp-ib fs-xxl">Мои контактные данные</h1>
+                    <p style="color: rgba(255, 255, 255, 0.25);">Мое экранное имя и E-Mail на платформах социальных сетей.</p>
                 </div>
 
                 <div style="text-align: left;">
@@ -162,7 +160,8 @@
                 --><span style="margin-inline-start: 16px;">KVUI V3<span class="us-n"> — </span>Made by <a href="https://hooskai.top">SiberiaHusky</a> with <a href="#" title="love">❤️</a></span>
             </div>
             <ul class="us-n" style="display: flex; margin: 32px; margin-top: 16px;">
-                <li><a href="https://creativecommons.org/licenses/by-sa/4.0/deed" target="_blank">CC BY-SA 4.0 DEED</a></li>
+                <li><a href="https://creativecommons.org/licenses/by-sa/4.0/deed.ru" target="_blank"><i class="fa-brands fa-creative-commons"></i> <i class="fa-brands fa-creative-commons-by"></i> <i class="fa-brands fa-creative-commons-sa"></i> CC BY-SA 4.0 DEED</a></li><!--
+                --><li style="color: rgba(255, 255, 255, 0.5);">Перевод: <a href="https://www.deepl.com/translator" target="_blank">DeepL</a></li>
             </ul>
         </footer>
     </body>
