--- a/404.html
+++ b/404.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale-1">
-        <title>404 Not found - Husky's World view</title>
+        <title>404 Не найдено - Хускаий мировоззрение</title>
         <link rel="icon" href="//hooskai.top/images/favicon.png">
         <!-- Description -->
-        <meta name="description" content="Connecting a Wider World">
+        <meta name="description" content="Связь с более широким миром">
         <!-- Keywords -->
-        <meta name="keywords" content="胡斯凯,胡斯凱,hooskai,siberia husky,SiberiaHusky">
+        <meta name="keywords" content="胡斯凯,胡斯凱,hooskai,siberia husky,SiberiaHusky,Нускаий">
         <!-- Fontawesome -->
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
         <!-- Style -->
@@ -19,14 +19,14 @@
         <!-- nav bar -->
         <nav class="blur us-n">
             <div style="margin: 24px; vertical-align: text-bottom;">
-                <p class="dp-ib fs-xl">404 Not found</p>
-                <a href="index.html" style="margin-inline-start: 16px;"><p class="dp-ib fs-lr">Husky</p><p class="dp-ib fs-" style="margin-inline-start: 2px;">'s World View</p></a>
+                <p class="dp-ib fs-xl">404 Не найдено</p>
+                <a href="https://ru.hooskai.top/" style="margin-inline-start: 16px;"><p class="dp-ib fs-lr">Хускаий</p><p class="dp-ib fs-" style="margin-inline-start: 4px;">мировоззрение</p></a>
             </div>
         </nav>
 
         <!-- tips -->
         <div class="us-n" style="display: flex; justify-content: center; background-color: rgba(255, 255, 255, 0.05);">
-            <div class="marquee" style="padding: 8px;"><p>Please make sure the URL you entered is correct. If the problem persists, please try again later or contact me for feedback.</p></div>
+            <div class="marquee" style="padding: 8px;"><p>Убедитесь в правильности введенного URL-адреса. Если проблема сохраняется, пожалуйста, повторите попытку позже или свяжитесь со мной для получения обратной связи.</p></div>
         </div>
 
         <!-- contents -->
@@ -38,7 +38,7 @@
                 <div class="gradient-overlay"></div>
             </div>
                 <div class="tt-c" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; z-index: 2;">
-                    <h1>The page you requested cannot be found.</h1>
+                    <h1>Запрошенная вами веб-страница не найдена.</h1>
                 </div>
             </div>
         </div>
@@ -52,7 +52,8 @@
                 --><span style="margin-inline-start: 16px;">KVUI V3<span class="us-n"> — </span>Made by <a href="https://hooskai.top">SiberiaHusky</a> with <a href="#" title="love">❤️</a></span>
             </div>
             <ul class="us-n" style="display: flex; margin: 32px; margin-top: 16px;">
-                <li><a href="https://creativecommons.org/licenses/by-sa/4.0/deed" target="_blank">CC BY-SA 4.0 DEED</a></li>
+                <li><a href="https://creativecommons.org/licenses/by-sa/4.0/deed.ru" target="_blank"><i class="fa-brands fa-creative-commons"></i> <i class="fa-brands fa-creative-commons-by"></i> <i class="fa-brands fa-creative-commons-sa"></i> CC BY-SA 4.0 DEED</a></li><!--
+                --><li style="color: rgba(255, 255, 255, 0.5);">Перевод: <a href="https://www.deepl.com/translator" target="_blank">DeepL</a></li>
             </ul>
         </footer>
     </body>
