--- a/links.html
+++ b/links.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale-1">
-        <title>Friends links - Husky's World view</title>
+        <title>Ссылки друзей - Хускаий мировоззрение</title>
         <link rel="icon" href="//hooskai.top/images/favicon.png">
         <!-- Description -->
-        <meta name="description" content="Connecting a Wider World">
+        <meta name="description" content="Связь с более широким миром">
         <!-- Keywords -->
-        <meta name="keywords" content="胡斯凯,胡斯凱,hooskai,siberia husky,SiberiaHusky">
+        <meta name="keywords" content="胡斯凯,胡斯凱,hooskai,siberia husky,SiberiaHusky,Нускаий">
         <!-- Fontawesome -->
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
         <!-- Style -->
@@ -19,14 +19,14 @@
         <!-- nav bar -->
         <nav class="blur us-n">
             <div style="margin: 24px; vertical-align: text-bottom;">
-                <p class="dp-ib fs-xl">Friends links</p>
-                <a href="index.html" style="margin-inline-start: 16px;"><p class="dp-ib fs-lr">Husky</p><p class="dp-ib fs-" style="margin-inline-start: 2px;">'s World View</p></a>
+                <p class="dp-ib fs-xl">Ссылки друзей</p>
+                <a href="https://ru.hooskai.top/" style="margin-inline-start: 16px;"><p class="dp-ib fs-lr">Хускаий</p><p class="dp-ib fs-" style="margin-inline-start: 4px;">мировоззрение</p></a>
             </div>
         </nav>
 
         <!-- tips -->
         <div class="us-n" style="display: flex; justify-content: center; background-color: rgba(255, 255, 255, 0.05);">
-            <div class="marquee" style="padding: 8px;"><p>They are my friends, my buddies, my supporters and my World. </p></div>
+            <div class="marquee" style="padding: 8px;"><p>Они - мои друзья, мои приятели, мои единомышленники и мой Мир. </p></div>
         </div>
 
         <!-- contents -->
@@ -38,7 +38,7 @@
                 <div class="gradient-overlay"></div>
             </div>
                 <div class="tt-c" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; z-index: 2;">
-                    <h1>You can be one too.</h1>
+                    <h1>Вы тоже можете им стать.</h1>
                 </div>
             </div>
 
@@ -46,8 +46,8 @@
             <div class="us-n" style="margin: 32px; margin-top: 0; text-align: end;">
                 <div style="vertical-align: text-bottom;">
                     <p class="dp-ib" style="margin-right: 8px; color: rgba(255, 255, 255, 0.25);">我的朋友们</p>
-                    <h1 class="dp-ib fs-xxl">My friends</h1>
-                    <!--p style="color: rgba(255, 255, 255, 0.25);">This list cannot be registered through link exchange.</p-->
+                    <h1 class="dp-ib fs-xxl">Мои друзья</h1>
+                    <!--p style="color: rgba(255, 255, 255, 0.25);">Данный список не может быть зарегистрирован путем обмена ссылками.</p-->
                 </div>
 
                 <div style="text-align: left;">
@@ -69,8 +69,8 @@
             <div class="us-n" style="margin: 32px; margin-top: 64px; margin-bottom: 128px; text-align: end;">
                 <div style="vertical-align: text-bottom;">
                     <p class="dp-ib" style="margin-right: 8px; color: rgba(255, 255, 255, 0.25);">友链</p>
-                    <h1 class="dp-ib fs-xxl">Links</h1>
-                    <p style="color: rgba(255, 255, 255, 0.25);">Contact me with my <a href="mailto:mail@hooskai.top">E-Mail</a> or <a href="/">other SMS social platform</a>.</p>
+                    <h1 class="dp-ib fs-xxl">Ссылки</h1>
+                    <p style="color: rgba(255, 255, 255, 0.25);">Свяжитесь со мной по E-Mail или через другую социальную платформу.</p>
                 </div>
 
                 <div style="text-align: left;">
@@ -79,7 +79,7 @@
                             <a href="#" target="_blank">
                                 <div style="margin-top: 16px; padding: 16px;">
                                     <p class="fs-l">
-                                        Null
+                                        Нулевой
                                     </p>
                                 </div>
                             </a>
@@ -98,7 +98,8 @@
                 --><span style="margin-inline-start: 16px;">KVUI V3<span class="us-n"> — </span>Made by <a href="https://hooskai.top">SiberiaHusky</a> with <a href="#" title="love">❤️</a></span>
             </div>
             <ul class="us-n" style="display: flex; margin: 32px; margin-top: 16px;">
-                <li><a href="https://creativecommons.org/licenses/by-sa/4.0/deed" target="_blank">CC BY-SA 4.0 DEED</a></li>
+                <li><a href="https://creativecommons.org/licenses/by-sa/4.0/deed.ru" target="_blank"><i class="fa-brands fa-creative-commons"></i> <i class="fa-brands fa-creative-commons-by"></i> <i class="fa-brands fa-creative-commons-sa"></i> CC BY-SA 4.0 DEED</a></li><!--
+                --><li style="color: rgba(255, 255, 255, 0.5);">Перевод: <a href="https://www.deepl.com/translator" target="_blank">DeepL</a></li>
             </ul>
         </footer>
     </body>
