--- a/links.html
+++ b/links.html
@@ -12,7 +12,7 @@
         <!-- Fontawesome -->
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
         <!-- Style -->
-        <link href="//ui.hooskai.top/assets/style.css" rel="stylesheet">
+        <link href="https://ui.hooskai.top/assets/style.css" rel="stylesheet">
     </head>
 
     <body>
