--- a/404.html
+++ b/404.html
@@ -1,59 +1,49 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="ru">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale-1">
-        <title>404 | Husky's World View</title>
+        <title>404 Не найдено | Хускаий мировоззрение</title>
         <link rel="icon" href="https://hooskai.top/images/favicon.png">
         <!-- Description -->
-        <meta name="description" content="Connecting a Wider World">
+        <meta name="description" content="Связь с более широким миром">
         <!-- Keywords -->
         <meta name="keywords" content="胡斯凯,胡斯凱,hooskai,siberia husky,SiberiaHusky">
         <!-- Fontawesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
         <!-- Style -->
-        <link href="/assets/style.css" rel="stylesheet">
+        <link href="https://ui.hooskai.top/assets/style.css" rel="stylesheet">
     </head>
 
     <body>
         <!-- nav bar -->
         <nav class="us-n">
             <div class="navbar" style="vertical-align: text-bottom;">
-                <p>404</p><a href="/" style="font-size: large;"><p>Husky's World View</p></a>
+                <p>404</p><a href="https://ru.hooskai.top/"><p style="font-size: large;">Хускаий мировоззрение</p></a>
             </div>
         </nav>
 
         <!-- contents -->
         <div class="us-n">
-            <!-- contents -->
-            <div class="container">
-                <!-- cover & slogan -->
-                <div style="position: relative; width: 100%;">
-                    <div class="image-container">
-                        <img src="https://hooskai.top/images/404.jpg" style="width: 100%;">
-                        <div class="gradient-overlay"></div>
-                    </div>
-                    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; z-index: 2;">
-                        <h1>The page you requested cannot be found.</h1>
-                    </div>
+            <!-- cover & slogan -->
+            <div style="position: relative; width: 100%;">
+                <div class="image-container">
+                    <img src="https://hooskai.top/images/404.jpg" style="width: 100%;">
+                    <div class="gradient-overlay"></div>
                 </div>
+                <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; z-index: 2;">
+                    <h1 style="font-size: xx-large;">Запрошенная вами веб-страница не найдена.</h1>
+                </div>
+            </div>
 
-                <!-- hitokoto & footer -->
-                <div class="card">
-                    <a id="hitokoto" target="_blank">
-                        <header>
-                            <p id="hitokoto_from" style="color: rgba(var(--text-color-primary-rgb), 0.25);"></p>
-                            <h1 id="hitokoto_text">Getting Hitokoto... :D</h1>
-                        </header>
-                    </a>
-
-                    <hr>
-
+            <div class="container">
+                <!-- footer -->
+                <div class="card" id="footer">
                     <div>
                         <p>Copyrights &copy; 2019-<span id="this_year"></span> <a href="/">胡斯凯(SiberiaHusky)</a>. All rights reserved.</p>
                         
                         <ul style="margin-top: 16px;">
-                            <li><a href="https://creativecommons.org/licenses/by-sa/4.0/deed" target="_blank" data-title="CC BY-SA 4.0 DEED"><i class="fa-brands fa-creative-commons"></i> <i class="fa-brands fa-creative-commons-by"></i> <i class="fa-brands fa-creative-commons-sa"></i></a></li>
+                            <li><a href="https://creativecommons.org/licenses/by-sa/4.0/deed.ru" target="_blank" data-title="CC BY-SA 4.0 DEED"><i class="fa-brands fa-creative-commons"></i> <i class="fa-brands fa-creative-commons-by"></i> <i class="fa-brands fa-creative-commons-sa"></i></a></li>
                             <li><a href="https://ui.hooskai.top/" target="_blank" data-title="Made with Welt UI"><img src="https://ui.hooskai.top/assets/img/Logo_White.png" style="height: 12px;"></a></li>
                         </ul>
                     </div>
@@ -63,23 +53,6 @@
     </body>
 
     <script type="text/javascript">
-        /* hitokoto */
-        fetch('https://v1.hitokoto.cn/?c=d&c=i&c=k')
-            .then(response => response.json())
-            .then(data => {
-                if (data.from_who) {
-                    document.querySelector('#hitokoto_from').innerText = data.from_who + '「' + data.from + '」 ';
-                }
-
-                document.querySelector('#hitokoto_text').innerText = data.hitokoto;
-                document.querySelector('#hitokoto').href = `https://hitokoto.cn/?uuid=${data.uuid}`;
-
-                document.querySelector('#hitokoto').addEventListener('click', function(event) {
-                    event.preventDefault();
-                    window.open(this.href, '_blank');
-                });
-        });
-
         /* date */
         var date = new Date();
           
