--- a/links.html
+++ b/links.html
@@ -1,69 +1,66 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="ru">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale-1">
-        <title>Friends links | Husky's World View</title>
+        <title>Ссылки друзей | Хускаий мировоззрение</title>
         <link rel="icon" href="https://hooskai.top/images/favicon.png">
         <!-- Description -->
-        <meta name="description" content="Connecting a Wider World">
+        <meta name="description" content="Связь с более широким миром">
         <!-- Keywords -->
         <meta name="keywords" content="胡斯凯,胡斯凱,hooskai,siberia husky,SiberiaHusky">
         <!-- Fontawesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
         <!-- Style -->
-        <link href="/assets/style.css" rel="stylesheet">
+        <link href="https://ui.hooskai.top/assets/style.css" rel="stylesheet">
     </head>
 
-    <body>
+    <body class="us-n">
         <!-- nav bar -->
         <nav class="us-n">
             <div class="navbar" style="vertical-align: text-bottom;">
-                <p>Friends link</p><a href="/" style="font-size: large;"><p>Husky's World View</p></a>
+                <p>Ссылки друзей</p><a href="/" style="font-size: large;"><p>Хускаий мировоззрение</p></a>
             </div>
         </nav>
 
         <!-- contents -->
-        <div class="us-n">
-            <!-- contents -->
-            <div class="container">
-                <!-- friends -->
-                <div class="card">
-                    <header style="position: relative;">
-                        <div style="padding: 0;">
-                            <p style="color: rgba(var(--text-color-primary-rgb), 0.25);">我的朋友们</p>
-                            <h1>My friends</h1>
-                            <!-- This list cannot be registered through link exchange. -->
-                        </div>
-
-                        <bold>They are my friends, my buddies, my supporters and my World.</bold>
-                    </header>
-
-                    <hr>
-
-                    <div>
-                        <ul class="flex">
-                            <li>
-                                <a href="https://blog.wsm.ink/" target="_blank">
-                                    <div class="card">
-                                        <p>Rominwolf's boxes<i class="fa-solid fa-arrow-up-right-from-square" id="icon-left"></i></p>
-                                    </div>
-                                </a>
-                            </li>
-                            <li></li>
-                        </ul>
+        <div class="container">
+            <!-- friends -->
+            <div class="card">
+                <header style="position: relative;">
+                    <div style="padding: 0;">
+                        <p style="color: rgba(var(--text-color-primary-rgb), 0.25);">我的朋友们</p>
+                        <h1>Мои друзья</h1>
+                        <!-- Данный список не может быть зарегистрирован путем обмена ссылками. -->
                     </div>
-                </div>
 
+                    <bold>Они - мои друзья, мои приятели, мои единомышленники и мой Мир.</bold>
+                </header>
+
+                <hr>
+
+                <div>
+                    <ul class="flex">
+                        <li>
+                            <a href="https://blog.wsm.ink/" target="_blank">
+                                <div class="card">
+                                    <p>Rominwolf's boxes<i class="fa-solid fa-arrow-up-right-from-square" id="icon-left"></i></p>
+                                </div>
+                            </a>
+                        </li>
+                        <li></li>
+                    </ul>
+                </div>
+                    
                 <!-- links -->
                 <div class="card">
                     <header style="position: relative;">
                         <div style="padding: 0;">
                             <p style="color: rgba(var(--text-color-primary-rgb), 0.25);">友链</p>
-                            <h1>Links</h1>
+                            <h1>Ссылки</h1>
                         </div>
 
-                        <bold>Contact me with my <a href="mailto:mail@hooskai.top">E-Mail</a> or <a href="/#contacts">other SMS social platform</a>.</bold>
+                        <bold>Свяжитесь со мной по <a href="mailto:mail@hooskai.top">E-Mail</a> или <a href="/#contacts">через другую социальную платформу</a>.</bold>
                     </header>
 
                     <hr>
@@ -73,7 +70,7 @@
                             <li>
                                 <a href="#">
                                     <div class="card">
-                                        <p>Null</p>
+                                        <p>Нулевой</p>
                                     </div>
                                 </a>
                             </li>
@@ -99,6 +96,7 @@
                         <ul style="margin-top: 16px;">
                             <li><a href="https://creativecommons.org/licenses/by-sa/4.0/deed" target="_blank" data-title="CC BY-SA 4.0 DEED"><i class="fa-brands fa-creative-commons"></i> <i class="fa-brands fa-creative-commons-by"></i> <i class="fa-brands fa-creative-commons-sa"></i></a></li>
                             <li><a href="https://ui.hooskai.top/" target="_blank" data-title="Made with Welt UI"><img src="https://ui.hooskai.top/assets/img/Logo_White.png" style="height: 12px;"></a></li>
+                            <li>Перевод: <a href="https://deepl.com/">DeepL</a></li>
                         </ul>
                     </div>
                 </div>
